--- a/DreamWorms-iOS/DreamWorms-iOS/Core/Literals/Localizable.xcstrings
+++ b/DreamWorms-iOS/DreamWorms-iOS/Core/Literals/Localizable.xcstrings
@@ -161,6 +161,18 @@
           }
         }
       }
+    },
+    "기지국 위치정보 저장하기" : {
+
+    },
+    "메시지 본문" : {
+
+    },
+    "본문: ${bodyText}" : {
+
+    },
+    "전달된 문자 메시지에 포함된 주소를 저장합니다." : {
+
     }
   },
   "version" : "1.1"
