[Refactor] #9  바텀시트 모디파이어, 설정 구조 변경
why?
- 기존 인스턴스 기반 구조를 클로저 방식으로 전환해 재사용성과 확장성을 높이고,
  detent 상태 관리의 일관성을 확보하기 위함입니다.
- 맵 뷰 위에서는 시트가 항상 떠 있어야 하므로, 함수형 구조를 제거해 지속 표시가 가능하도록 수정했습니다.

what?
- content 파라미터를 클로저 기반으로 변경했습니다.
- .interactiveDismissDisabled(true)로 시트 드래그 닫기 방지를 통합했습니다.
- DWBottomSheetConfiguration의 detent(.large) 중복 정의를 수정했습니다.
- View extension의 modifier 호출 방식을 개선했습니다.

--- a/DreamWorms-iOS/DreamWorms-iOS/Core/Literals/Localizable.xcstrings
+++ b/DreamWorms-iOS/DreamWorms-iOS/Core/Literals/Localizable.xcstrings
@@ -161,6 +161,33 @@
           }
         }
       }
+    },
+    "기지국" : {
+
+    },
+    "날짜: 2025-10-19 ~ 2025-10-20" : {
+
+    },
+    "닫기" : {
+
+    },
+    "셀 %lld" : {
+
+    },
+    "장소" : {
+
+    },
+    "증거 정보" : {
+
+    },
+    "증거 종류 탭" : {
+
+    },
+    "차량" : {
+
+    },
+    "카드내역" : {
+
     }
   },
   "version" : "1.1"
