[Feat] EvidenceBottomSheet Header UI구현
why ?
- 사건명, 용의자 정보, 기지국 총 갯수를 위해

what ?
- 각 역할마다 SRP에 따라 SubViews 나눔
- 이후 Case모델 데이터 불러올것을 대비해서 UIView 구성

--- a/DreamWorms-iOS/DreamWorms-iOS/Core/Literals/Localizable.xcstrings
+++ b/DreamWorms-iOS/DreamWorms-iOS/Core/Literals/Localizable.xcstrings
@@ -118,6 +118,17 @@
         }
       }
     },
+    "caseBottomSheet_caseTitleHeader" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "%1$(caseTitleHeader)@"
+          }
+        }
+      }
+    },
     "caseCard_caseNumber" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -194,6 +205,17 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "최신"
+          }
+        }
+      }
+    },
+    "pin_count" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "%1$(dataLocationCount)lld개"
           }
         }
       }
