[Feat] #10 DateFilter UI 구현
why ?
- DateFilter 시작일, 마감일 선택 후 필터링 해야하기 때문

what ?
- TextInput을 활용하여 커스텀

--- a/DreamWorms-iOS/DreamWorms-iOS/Core/Literals/Localizable.xcstrings
+++ b/DreamWorms-iOS/DreamWorms-iOS/Core/Literals/Localizable.xcstrings
@@ -1,6 +1,9 @@
 {
   "sourceLanguage" : "ko",
   "strings" : {
+    "—" : {
+
+    },
     "%lld" : {
 
     },
@@ -110,6 +113,17 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "%1$(caseTitleHeader)@"
+          }
+        }
+      }
+    },
+    "caseBottomSheet_separator" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "~"
           }
         }
       }
