[Chore]: Update Localizable file  and project settings
-

--- a/DreamWorms-iOS/DreamWorms-iOS/Core/Literals/Localizable.xcstrings
+++ b/DreamWorms-iOS/DreamWorms-iOS/Core/Literals/Localizable.xcstrings
@@ -207,6 +207,9 @@
     "닫기" : {
 
     },
+    "리뷰 %lld" : {
+
+    },
     "메시지 본문" : {
 
     },
@@ -217,6 +220,9 @@
 
     },
     "장소" : {
+
+    },
+    "장소, 주소 검색" : {
 
     },
     "전달된 문자 메시지에 포함된 주소를 저장합니다." : {
@@ -232,6 +238,15 @@
 
     },
     "카드내역" : {
+
+    },
+    "카페" : {
+
+    },
+    "패스트푸드" : {
+
+    },
+    "편의점" : {
 
     }
   },
