--- a/DreamWorms-iOS/DreamWorms-iOS/Core/Literals/Localizable.xcstrings
+++ b/DreamWorms-iOS/DreamWorms-iOS/Core/Literals/Localizable.xcstrings
@@ -1,8 +1,15 @@
 {
   "sourceLanguage" : "ko",
   "strings" : {
-    "—" : {
-
+    "%@ - %@" : {
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "%1$@ - %2$@"
+          }
+        }
+      }
     },
     "%lld" : {
 
@@ -231,16 +238,7 @@
         }
       }
     },
-    "기지국" : {
-
-    },
     "기지국 위치정보 저장하기" : {
-
-    },
-    "날짜: 2025-10-19 ~ 2025-10-20" : {
-
-    },
-    "닫기" : {
 
     },
     "메시지 본문" : {
@@ -249,25 +247,7 @@
     "본문: ${bodyText}" : {
 
     },
-    "셀 %lld" : {
-
-    },
-    "장소" : {
-
-    },
     "전달된 문자 메시지에 포함된 주소를 저장합니다." : {
-
-    },
-    "증거 정보" : {
-
-    },
-    "증거 종류 탭" : {
-
-    },
-    "차량" : {
-
-    },
-    "카드내역" : {
 
     }
   },
