[Chore] #19 Update Date Extension & xcstrings & project setting file
What?
- 잡 일.

--- a/DreamWorms-iOS/DreamWorms-iOS/Core/Literals/Localizable.xcstrings
+++ b/DreamWorms-iOS/DreamWorms-iOS/Core/Literals/Localizable.xcstrings
@@ -4,6 +4,12 @@
     "%lld" : {
 
     },
+    "•" : {
+
+    },
+    "230m" : {
+
+    },
     "btn_add" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -195,6 +201,15 @@
         }
       }
     },
+    "검색 결과가 없습니다" : {
+
+    },
+    "검색 중 오류가 발생했습니다" : {
+
+    },
+    "검색 중..." : {
+
+    },
     "기지국" : {
 
     },
@@ -225,6 +240,9 @@
     "장소, 주소 검색" : {
 
     },
+    "장소를 검색해보세요" : {
+
+    },
     "전달된 문자 메시지에 포함된 주소를 저장합니다." : {
 
     },
@@ -238,15 +256,6 @@
 
     },
     "카드내역" : {
-
-    },
-    "카페" : {
-
-    },
-    "패스트푸드" : {
-
-    },
-    "편의점" : {
 
     }
   },
