[Feat] 10월 초반 MVP 프로토타입

--- a/DreamWorms-iOS/DreamWorms-iOS/Core/Literals/Localizable.xcstrings
+++ b/DreamWorms-iOS/DreamWorms-iOS/Core/Literals/Localizable.xcstrings
@@ -259,6 +259,9 @@
     "본문: ${bodyText}" : {
 
     },
+    "위치 데이터가 없습니다" : {
+
+    },
     "장소, 주소 검색" : {
 
     },
@@ -266,6 +269,9 @@
 
     },
     "전달된 문자 메시지에 포함된 주소를 저장합니다." : {
+
+    },
+    "진행중" : {
 
     }
   },
