[Feat] Implementation Camera

--- a/DreamWorms-iOS/DreamWorms-iOS/Core/Literals/Localizable.xcstrings
+++ b/DreamWorms-iOS/DreamWorms-iOS/Core/Literals/Localizable.xcstrings
@@ -256,6 +256,12 @@
     "메시지 본문" : {
 
     },
+    "보고서 스캔" : {
+
+    },
+    "보고서를 사각형에 맞게 놓아주세요" : {
+
+    },
     "본문: ${bodyText}" : {
 
     },
@@ -272,6 +278,9 @@
 
     },
     "진행중" : {
+
+    },
+    "촬영하기" : {
 
     }
   },
