[Feat] #23 - 케이스 리스트에 들어가는 케이스 카드 UI 구현
Why?
- 케이스 리스트에 들어가는 카드 항목을 별도의 SubViews로 분리하기 위함

What?
- 케이스 카드에 들어가는 Asset, StringLiterals 항목 추가
- CoreData CaseEntity로부터 뷰에 받아와 그릴 때 사용할 Model, Case 구조체 구현
- CaseCard UI 구현

--- a/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
+++ b/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
@@ -13,6 +13,18 @@
         }
       }
     },
+    "caseCard_number" : {
+      "comment" : "케이스 리스트_케이스 카드에 들어가는 숫자 표시",
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "no. %1$(number)@"
+          }
+        }
+      }
+    },
     "map" : {
       "comment" : "탭바_지도 뷰 이름",
       "extractionState" : "manual",
