--- a/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
+++ b/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
@@ -13,6 +13,18 @@
         }
       }
     },
+    "button_addCase" : {
+      "comment" : "버튼_사건추가",
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "사건추가"
+          }
+        }
+      }
+    },
     "caseCard_number" : {
       "comment" : "케이스 리스트_케이스 카드에 들어가는 숫자 표시",
       "extractionState" : "manual",
