--- a/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
+++ b/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
@@ -25,6 +25,42 @@
         }
       }
     },
+    "button_delete" : {
+      "comment" : "버튼_삭제하기",
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "삭제하기"
+          }
+        }
+      }
+    },
+    "button_edit" : {
+      "comment" : "버튼_수정하기",
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "수정하기"
+          }
+        }
+      }
+    },
+    "button_share" : {
+      "comment" : "버튼_공유하기",
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "공유하기"
+          }
+        }
+      }
+    },
     "caseCard_number" : {
       "comment" : "케이스 리스트_케이스 카드에 들어가는 숫자 표시",
       "extractionState" : "manual",
@@ -93,18 +129,6 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "CaseAdd View!"
-          }
-        }
-      }
-    },
-    "test_CaseList" : {
-      "comment" : "⚠️지울내용",
-      "extractionState" : "manual",
-      "localizations" : {
-        "ko" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "CaseList View!"
           }
         }
       }
