--- a/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
+++ b/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
@@ -64,6 +64,78 @@
         }
       }
     },
+    "caseAdd_caseName" : {
+      "comment" : "케이스 추가_텍스트필드 타이틀_사건명",
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "사건명"
+          }
+        }
+      }
+    },
+    "caseAdd_caseNumber" : {
+      "comment" : "케이스 추가_텍스트필드 타이틀_사건번호",
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "사건번호"
+          }
+        }
+      }
+    },
+    "caseAdd_crime" : {
+      "comment" : "케이스 추가_텍스트필드 타이틀_범죄유형",
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "범죄유형"
+          }
+        }
+      }
+    },
+    "caseAdd_DeleteImage" : {
+      "comment" : "케이스 추가_프로필 사진 삭제",
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "프로필 사진 삭제"
+          }
+        }
+      }
+    },
+    "caseAdd_selectImage" : {
+      "comment" : "케이스 추가_앨범에서 선택",
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "앨범에서 선택"
+          }
+        }
+      }
+    },
+    "caseAdd_suspectName" : {
+      "comment" : "케이스 추가_텍스트필드 타이틀_피의자명",
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "피의자명"
+          }
+        }
+      }
+    },
     "caseCard_number" : {
       "comment" : "케이스 리스트_케이스 카드에 들어가는 숫자 표시",
       "extractionState" : "manual",
@@ -96,6 +168,54 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "지도"
+          }
+        }
+      }
+    },
+    "placeholder_caseName" : {
+      "comment" : "플레이스홀더_사건명을 입력해 주세요",
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "사건명을 입력해 주세요."
+          }
+        }
+      }
+    },
+    "placeholder_caseNumber" : {
+      "comment" : "플레이스홀더_사건번호를 입력해 주세요.",
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "사건번호를 입력해 주세요."
+          }
+        }
+      }
+    },
+    "placeholder_crime" : {
+      "comment" : "플레이스홀더_범죄유형을 입력해 주세요.",
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "범죄유형을 입력해 주세요."
+          }
+        }
+      }
+    },
+    "placeholder_suspectName" : {
+      "comment" : "플레이스홀더_피의자명을 입력해 주세요.",
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "피의자명을 입력해 주세요."
           }
         }
       }
@@ -204,6 +324,18 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Time Line View!"
+          }
+        }
+      }
+    },
+    "textField_emptyErrorMessage" : {
+      "comment" : "텍스트필드_에러 메시지_텍스트를 입력해 주세요.",
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "텍스트를 입력해 주세요."
           }
         }
       }
