--- a/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
+++ b/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
@@ -232,6 +232,18 @@
         }
       }
     },
+    "test_analyze" : {
+      "comment" : "분석_타이틀 예시 문구",
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "top 3 에서 7-8시에\n머무를 가능성이 높아요."
+          }
+        }
+      }
+    },
     "test_Camera" : {
       "comment" : "⚠️지울내용",
       "extractionState" : "manual",
