[Feat] #34 - 타임라인 바텀시트 SearchBar UI 컴포너트 구현
Why?
- 시트 내부에서 사용할 전용 검색 입력 필드가 필요했음
- 기존 DWTextField는 제목·에러 메시지 등을 포함해 단순 검색 UI에 재활용 어려움

How?
- 검색 전용 컴포넌트 DWSearchBar 추가
- 내부 포커스 상태(@FocusState)로 포커스 제어
- 입력 중일 때 작은 X 버튼 표시 ( 텍스트 초기화 )
- 외부에서 큰 X 버튼 조합해서 검색 모드 종료 처리 가능
- .setupPlaceholder, .setupPadding, .setupSubmit 메서드로 체이닝 구성 가능

--- a/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
+++ b/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
@@ -16,6 +16,30 @@
         }
       }
     },
+    "bottomSheet_caseLocation_pinCount" : {
+      "comment" : "바텀시트_케이스_위치_핀_갯수",
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "%1$(countNumber)lld개"
+          }
+        }
+      }
+    },
+    "bottomSheet_cellLocation_searchText" : {
+      "comment" : "기지국_주소_검색",
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "기지국 주소 검색"
+          }
+        }
+      }
+    },
     "button_addCase" : {
       "comment" : "버튼_사건추가",
       "extractionState" : "manual",
