--- a/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
+++ b/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
@@ -4,6 +4,9 @@
     "" : {
 
     },
+    "%lld" : {
+
+    },
     "analyze" : {
       "comment" : "탭바_대시보드 뷰 이름",
       "extractionState" : "manual",
@@ -156,6 +159,66 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "사건을 추가하거나\n확인할 사건을 선택하세요."
+          }
+        }
+      }
+    },
+    "dashboard_visitDurationCellTower_Title" : {
+      "comment" : "대시보드_기지국별 체류시간_타이틀",
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "기지국별 체류시간"
+          }
+        }
+      }
+    },
+    "dashboard_visitDurationRank_Description" : {
+      "comment" : "대시보드_체류시간 순위_설명",
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "머문시간이 가장 긴 기지국 위치 순위입니다."
+          }
+        }
+      }
+    },
+    "dashboard_visitDurationRank_Title" : {
+      "comment" : "대시보드_체류시간 순위_타이틀",
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "체류시간 순위"
+          }
+        }
+      }
+    },
+    "dashboard_visitFreqRank_Description" : {
+      "comment" : "대시보드_방문빈도 순위_설명",
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "방문빈도가 가장 높은 기지국 위치 순위입니다."
+          }
+        }
+      }
+    },
+    "dashboard_visitFreqRank_Title" : {
+      "comment" : "대시보드_방문빈도 순위_타이틀",
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "방문빈도 순위"
           }
         }
       }
@@ -348,6 +411,30 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "텍스트를 입력해 주세요."
+          }
+        }
+      }
+    },
+    "visitDuration" : {
+      "comment" : "체류 시간",
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "체류 시간"
+          }
+        }
+      }
+    },
+    "visitFrequency" : {
+      "comment" : "방문 빈도",
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "방문 빈도"
           }
         }
       }
