[Feat] #34 - 바텀시트 TimeLineCellLocationDetail 컴포넌트 UI 구현
why ?
- 바텀시트에 용의자가 체류한 기지국별 Cell 위치 데이터 시각화 필요합니다.

How ?
- 타임라인 위치 정보 셀 컴포넌트 추가
- 시간 범위 포맷을 Localizable로 분리
- hh:mm 형식 지원 (AM\PM)
- CoreData Date 직접 사용가능 하게 구현

--- a/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
+++ b/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
@@ -363,6 +363,30 @@
           }
         }
       }
+    },
+    "timeRange_Format" : {
+      "comment" : "바텀시트_빈도수_체류시간",
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "%1$(start)@ - %2$(end)@"
+          }
+        }
+      }
+    },
+    "us_ver" : {
+      "comment" : "미국_버전",
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "en_US"
+          }
+        }
+      }
     }
   },
   "version" : "1.1"
