[Feat] #51 - TimeLineView UI 구현
why ?

- 바텀시트 TimeLine을 위해서

how ?

- 만든 UI들을 조립해서 적절하게 데이터 분기를 나눠서 바인딩함.

--- a/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
+++ b/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
@@ -47,7 +47,7 @@
       }
     },
     "bottomSheet_no_cellData" : {
-      "comment" : "기지국_정보_없음",
+      "comment" : "기지국_정보가_없음",
       "extractionState" : "manual",
       "localizations" : {
         "ko" : {
