[Feat] #51 - 목데이터용 CaseRepository 함수 및 연결 구현, 목 데이터 연결
why ?

- 실데이터가 아무것도 없을때는 목데이터로 채워줘야함.

--- a/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
+++ b/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
@@ -7,6 +7,9 @@
     "%lld" : {
 
     },
+    "%lld/10" : {
+
+    },
     "%lld개" : {
 
     },
@@ -645,6 +648,9 @@
           }
         }
       }
+    },
+    "사진" : {
+
     }
   },
   "version" : "1.1"
