[Chore] #69 - cctv, layer 뷰에 쓰일 Assets 추가 및 리터럴 업데이트
What?
- SVG로 모두 추가했습니다. 싱글 스케일 적용 완료.
- String 리터럴 다 업데이트 했어요.
- 폰트 적용 안된 거 하나 추가했습니다.!!

Why?
- 커버리지 이미지를 PNG를 해야하나!!!! 아님 그려야하나 !! 싶었는데 SVG로 올려보니 괜찮아서 이대로 갑니다.

--- a/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
+++ b/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
@@ -265,6 +265,28 @@
         }
       }
     },
+    "CCTV" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "CCTV"
+          }
+        }
+      }
+    },
+    "cell_station" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "기지국"
+          }
+        }
+      }
+    },
     "dashboard_visitDurationCellTower_Title" : {
       "comment" : "대시보드_기지국별 체류시간_타이틀",
       "extractionState" : "manual",
@@ -325,6 +347,28 @@
         }
       }
     },
+    "layer_setting_coverage_title" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "기지국 반경"
+          }
+        }
+      }
+    },
+    "layer_setting_toggle_title" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "지도 세부 정보"
+          }
+        }
+      }
+    },
     "map" : {
       "comment" : "탭바_지도 뷰 이름",
       "extractionState" : "manual",
@@ -333,6 +377,17 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "지도"
+          }
+        }
+      }
+    },
+    "map_setting" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "지도 설정"
           }
         }
       }
