--- a/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
+++ b/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
@@ -693,7 +693,22 @@
         }
       }
     },
+    "기지국 위치정보 저장하기" : {
+
+    },
+    "메시지 본문" : {
+
+    },
+    "발신자 번호" : {
+
+    },
+    "본문: ${messageBody}" : {
+
+    },
     "사진" : {
+
+    },
+    "전달된 문자 메시지에 포함된 주소를 추출하여 케이스에 저장합니다." : {
 
     }
   },
