[Feat] #66 - Chart 코드 정리 & RuleMark 기초 추가
What?
- 차트를 클릭했을 때 (chartXSelection) 현재 시간을 계산하여 보여지는 RuleMark를 추가했습니다.
- HourlyVisit id값 수정

--- a/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
+++ b/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
@@ -29,6 +29,9 @@
     "%lld개" : {
 
     },
+    "%lld주차" : {
+
+    },
     "analyze" : {
       "comment" : "탭바_대시보드 뷰 이름",
       "extractionState" : "manual",
@@ -570,6 +573,9 @@
           }
         }
       }
+    },
+    "Selected Hour" : {
+
     },
     "summary" : {
       "comment" : "탭바_원 페이지 뷰 이름",
