[Feat] #93 - CaseAdd 텍스트필드 순차적으로 노출되도록 수정
What ?
- 피그마 상 변경된 UI를 반영합니다. (레이아웃 간격 조정 포함)
- 텍스트필드 순서와, 노출 되는 기능을 추가하기 위함입니다.

--- a/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
+++ b/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
@@ -10,7 +10,20 @@
     "%lld" : {
 
     },
+    "%lld/%lld" : {
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "%1$lld/%2$lld"
+          }
+        }
+      }
+    },
     "%lld/10" : {
+
+    },
+    "%lld%%" : {
 
     },
     "%lld개" : {
@@ -562,7 +575,7 @@
         "ko" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "010-1234-5678"
+            "value" : "셀 번호를 받을 번호를 입력해 주세요."
           }
         }
       }
@@ -602,6 +615,9 @@
           }
         }
       }
+    },
+    "ScanLoad" : {
+
     },
     "scanLoad_subTitle" : {
       "comment" : "스캔 로딩_서브타이틀",
@@ -807,6 +823,9 @@
         }
       }
     },
+    "Visits" : {
+
+    },
     "기지국 위치정보 저장하기" : {
 
     },
@@ -817,17 +836,14 @@
 
     },
     "본문: ${messageBody}" : {
-   
-    },
-    "Visits" : {
 
     },
     "사진" : {
 
     },
     "전달된 문자 메시지에 포함된 주소를 추출하여 케이스에 저장합니다." : {
-    
-    } ,
+
+    },
     "주차" : {
 
     }
