[Feat] #66 - 차트 Highlighted 부분 RectangleMark 추가
What?
- 시간대별 방문 수 데이터를 기반으로, 스무딩된 평균값 중 threshold 이상이 연속된 가장 긴 구간을 찾아 하이라이트(RectangleMark)로 표시

How?
- smoothedTotals에서 이동평균 계산 시 24시간 원형 래핑을 적용하여 시간대의 연속성을 보장
- bestHighBand에서 스무딩된 값의 최대값(peakValue)을 기준으로 임계치(cutoffValue)를 계산
- 임계치를 초과하는 연속 구간 중 가장 긴 구간을 탐색하여 반환, 없을 경우 최대 피크 시각을 단일 구간으로 반환
- RectangleMark를 사용해 차트 상에서 해당 시간대 구간을 반투명 밴드로 시각적 강조

--- a/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
+++ b/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
@@ -380,6 +380,9 @@
         }
       }
     },
+    "from" : {
+
+    },
     "Hour" : {
 
     },
@@ -438,6 +441,12 @@
           }
         }
       }
+    },
+    "max" : {
+
+    },
+    "min" : {
+
     },
     "photoDetails_currentIndex" : {
       "comment" : "이미지 상세_현재이미지/총 이미지 수",
@@ -720,6 +729,9 @@
           }
         }
       }
+    },
+    "to" : {
+
     },
     "us_ver" : {
       "comment" : "미국_버전",
