--- a/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
+++ b/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
@@ -29,6 +29,9 @@
     "%lld개" : {
 
     },
+    "%lld회 인식" : {
+
+    },
     "analyze" : {
       "comment" : "탭바_대시보드 뷰 이름",
       "extractionState" : "manual",
@@ -125,6 +128,42 @@
         }
       }
     },
+    "camera_back_sheet_action_cancel" : {
+      "comment" : "카메라 나가기_액션시트_취소",
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "취소"
+          }
+        }
+      }
+    },
+    "camera_back_sheet_action_confirm" : {
+      "comment" : "카메라 나가기_액션시트_모두 삭제",
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "모든 자료 삭제"
+          }
+        }
+      }
+    },
+    "camera_back_sheet_title" : {
+      "comment" : "카메라 나가기_액션시트_타이틀",
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "촬영한 모든 자료를 삭제합니다."
+          }
+        }
+      }
+    },
     "camera_ExitAlertContent" : {
       "comment" : "카메라 나가기_스캔 중단 안내 컨텐츠",
       "extractionState" : "manual",
@@ -173,6 +212,18 @@
         }
       }
     },
+    "camera_lensSmudgeMessage" : {
+      "comment" : "카메라 토스트_렌즈 얼룩 알림 메세지",
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "정확도를 위해 카메라 렌즈를 닦아주세요"
+          }
+        }
+      }
+    },
     "camera_PhotolimitMessage" : {
       "comment" : "카메라 토스트_사진 장수 제한 메세지",
       "extractionState" : "manual",
@@ -181,6 +232,18 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "최대 10장까지 업로드할 수 있습니다."
+          }
+        }
+      }
+    },
+    "camera_stabilizationModeMessage" : {
+      "comment" : "카메라 토스트_흔들림 알림 메세지",
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "흔들린 사진은 인식할 수 없습니다."
           }
         }
       }
@@ -459,6 +522,18 @@
         }
       }
     },
+    "mapview_pin_create_done" : {
+      "comment" : "스캔 목록_핀 추가 완료 시_맵뷰 토스트",
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "핀 추가가 완료되었습니다."
+          }
+        }
+      }
+    },
     "mapview_placeInfo_basic_Info" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -611,6 +686,102 @@
         }
       }
     },
+    "scanList_pin_add_duplicate_alert_button_cancel" : {
+      "comment" : "스캔 목록_핀 추가 시 중복 주소 알람_버튼_취소",
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "취소"
+          }
+        }
+      }
+    },
+    "scanList_pin_add_duplicate_alert_button_confirm" : {
+      "comment" : "스캔 목록_핀 추가 시 중복 주소 알람_버튼_덮어쓰기",
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "덮어쓰기"
+          }
+        }
+      }
+    },
+    "scanList_pin_add_duplicate_alert_content" : {
+      "comment" : "스캔 목록_핀 추가 시 중복 주소 알람_내용",
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "기존에 ‘%@'에 저장된 핀이 있습니다. 기존 내용을 지우고 덮어쓸까요?"
+          }
+        }
+      }
+    },
+    "scanList_pin_add_duplicate_alert_title" : {
+      "comment" : "스캔 목록_핀 추가 시 중복 주소 알람_타이틀",
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "핀 덮어쓰기"
+          }
+        }
+      }
+    },
+    "scanList_pin_delete_alert_button_cancel" : {
+      "comment" : "스캔 목록_핀 추가 취소 알람_취소안함",
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "계속 추가"
+          }
+        }
+      }
+    },
+    "scanList_pin_delete_alert_button_confirm" : {
+      "comment" : "스캔 목록_핀 추가 취소 알람_삭제함",
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "삭제하기"
+          }
+        }
+      }
+    },
+    "scanList_pin_delete_alert_contents" : {
+      "comment" : "핀 삭제 Alert_내용",
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "촬영한 자료를 모두 지우고 지도 화면으로 돌아갑니다. 추가 중인 핀을 삭제할까요?"
+          }
+        }
+      }
+    },
+    "scanList_pin_delete_alert_title" : {
+      "comment" : "핀 삭제 Alert_타이틀",
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "핀 삭제"
+          }
+        }
+      }
+    },
     "scanList_title" : {
       "comment" : "스캔 목록_타이틀",
       "extractionState" : "manual",
@@ -618,13 +789,10 @@
         "ko" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "지도에 표시할 주소를\\n모두 선택해주세요"
+            "value" : "지도에 표시할 주소를\n모두 선택해주세요"
           }
         }
       }
-    },
-    "ScanLoad" : {
-
     },
     "scanLoad_subTitle" : {
       "comment" : "스캔 로딩_서브타이틀",
@@ -806,6 +974,9 @@
         }
       }
     },
+    "Vision 기능" : {
+
+    },
     "visitDuration" : {
       "comment" : "대시보드_체류시간",
       "extractionState" : "manual",
@@ -830,28 +1001,76 @@
         }
       }
     },
+    "Visits" : {
+
+    },
+    "기본 설정" : {
+
+    },
+    "기본 스타일" : {
+
+    },
     "기지국 위치정보 저장하기" : {
 
     },
+    "렌즈 얼룩 감지" : {
+
+    },
     "메시지 본문" : {
+
+    },
+    "문서 인식" : {
 
     },
     "발신자 번호" : {
 
     },
     "본문: ${messageBody}" : {
-   
+
     },
-    "Visits" : {
+    "분석 결과가 없습니다" : {
 
     },
     "사진" : {
 
     },
+    "선택한 주소가 지도에 추가되었습니다." : {
+
+    },
+    "신뢰도: %lld%%" : {
+
+    },
+    "실제 사용 예시" : {
+
+    },
+    "자동 포커스" : {
+
+    },
+    "저장 실패" : {
+
+    },
+    "저장 완료" : {
+
+    },
     "전달된 문자 메시지에 포함된 주소를 추출하여 케이스에 저장합니다." : {
-    
-    } ,
+
+    },
     "주차" : {
+
+    },
+    "커스텀: 빨강" : {
+
+    },
+    "커스텀: 초록" : {
+
+    },
+    "커스텀: 파랑" : {
+
+    },
+    "플래시" : {
+
+    },
+    "확인" : {
 
     }
   },
