[Feat] #82 - TimeLine 연속 그룹핑 및 Top3 시각화 구현
why ?

- GMT 기준으로 목데이터가 불려와서 13일까지 한국기준으로 ++9시간 되어서 보임

How ?

- 연속된 같은 주소를 하나의 그룹으로 병합
- 각 그룹의 시작/종료 시간 자동 계산
- 전체 데이터에서 Top3 방문 주소 추출 및 ColorStick 상태 적용
- Mock 데이터 TimeZone 버그 수정 (UTC → Asia/Seoul)
- 성능 최적화: 1패스 그룹핑 알고리즘 (O(n), 메모리 O(1))

--- a/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
+++ b/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
@@ -1076,6 +1076,9 @@
     "Visits" : {
 
     },
+    "Week" : {
+
+    },
     "기지국 위치정보 저장하기" : {
 
     },
@@ -1086,6 +1089,10 @@
 
     },
     "본문: ${messageBody}" : {
+
+    },
+    "분석 결과가 없습니다" : {
+
     },
     "사진" : {
 
