refactor: PlaceInfoSheet edit for Add Pin
- 핀 추가를 위한 PlaceInfoSheet 코드를 추가했습니다.
- 동시에 누락됐던 Localizable 도 반영했습니다.

--- a/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
+++ b/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
@@ -717,6 +717,17 @@
         }
       }
     },
+    "memo_write_empty" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "형사 노트 작성하기"
+          }
+        }
+      }
+    },
     "memo_write_placeHolder" : {
       "comment" : "메모 노트 작성 시 placeholder",
       "extractionState" : "manual",
