fix: localizable edit
what?
- 오타난 localizable 수정

--- a/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
+++ b/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
@@ -821,7 +821,7 @@
         "ko" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "최대 허용 글자 수"
+            "value" : "/20"
           }
         }
       }
