[Chore] #86 - 그냥 swift Formatting

--- a/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
+++ b/SUSA24-iOS/SUSA24-iOS/Resources/Literals/Localizable.xcstrings
@@ -1085,13 +1085,13 @@
     "메시지 본문" : {
 
     },
-    "발신자 번호" : {
-
-    },
-    "본문: ${messageBody}" : {
+    "본문: ${messageBody}, 사건번호: ${caseNumber}" : {
 
     },
     "분석 결과가 없습니다" : {
+
+    },
+    "사건번호" : {
 
     },
     "사진" : {
